--- a/data/official_data_oysters copy.Rmd
+++ b/data/official_data_oysters copy.Rmd
@@ -14,6 +14,7 @@ library("extrafont")
 loadfonts(device = "all")
 library("ggpubr")
 library("ggsignif")
+library("colorspace")
 ```
 
 ## Read data
@@ -56,29 +57,31 @@ print(sediment_data_new)
 ### plot data - normalized
 ```{r}
 
-compare_means(Normalized.Values ~ Location, data = sediment_data_new, method = "kruskal.test" )
+compare_means(Normalized.Values ~ Location, data = sediment_data_new, method = "kruskal.test", p.adjust.methods = "bonferroni" )
 
 
-dnaconc <- ggplot(data = sediment_data_new, mapping = aes(x = Location, y = Normalized.Values)) +
-  geom_point(mapping = aes(color=Treatment, shape = Treatment), position = position_jitterdodge()) +
-  scale_color_manual(values = c("lightskyblue2", "plum3")) + 
-  geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), outlier.shape =  NA)+ 
-  stat_compare_means(method = "kruskal.test", label.y = 20000) + 
-  geom_signif(comparisons = list(c("Duxbury Bay", "Ninigret Pond")))+ 
-  geom_signif(comparisons = list(c("Ninigret Pond", "RWU")))+ 
-  geom_signif(comparisons = list(c("RWU", "Saltbox")))+ 
-  geom_signif(comparisons = list(c("Saltbox", "Town Pond")))+ 
-  geom_signif(comparisons = list(c("Town Pond", "Duxbury Bay")))+
+dnaconc <- ggplot(data = sediment_data_new, mapping = aes(x = Location, y = Normalized.Values)) + 
+  geom_point(mapping = aes(color = Treatment), size = 4, position = position_jitterdodge())+
+  geom_boxplot(alpha = 0.4, color = "powderblue", size = 1, outlier.shape =  NA)+
+  scale_color_manual(values = c("orchid4", "orchid4"))+ 
+  stat_compare_means(method = "kruskal.test", p.adjust.methods="bonferroni" , label.y = 19000) + 
+  geom_signif(comparisons = list(c("Duxbury Bay", "Ninigret Pond")), map_signif_level=TRUE, y_position = 12000)+ 
+  geom_signif(comparisons = list(c("Ninigret Pond", "RWU")), map_signif_level=TRUE, y_position = 15000)+ 
+  geom_signif(comparisons = list(c("RWU", "Saltbox")), map_signif_level=TRUE, y_position = 11000)+
+  geom_signif(comparisons = list(c("Town Pond", "Duxbury Bay")), map_signif_level=TRUE, y_position = 17000)+
+  geom_signif(comparisons = list(c("Saltbox", "Town Pond")), map_signif_level=TRUE, y_position = 13000)+ 
   labs(
-  x = "Location",
-  y = "DNA Concentration (ng DNA / g sediment)",
-  title = "DNA Concentration in Oyster and Bare Sediment Samples Across Locations",
-  color = "Treatment"
-) + theme(plot.title=element_text(hjust=0.5), panel.background = element_rect(fill = "ivory2"), text = element_text(family = "Times New Roman", size=12))
+    x = "Location",
+    y = "DNA Concentration (ng DNA / g sediment)",
+    title = "DNA Concentration in Oyster and Bare Sediment Samples Across Locations",
+    color = "Treatment"
+) + theme(plot.title=element_text(hjust=0.5), legend.position = "none",  panel.background = element_rect(fill = "ivory2"), text = element_text(family = "Times New Roman", size=16))
 
 #t.test(sediment_data_new$Location, sediment_data_new$Normalized.Values)
 #dnaconc + stat_compare_means(method = "t.test")
 dnaconc
+
+
 
 #+ scale_y_continuous(breaks = seq(from=0, to= 40, by= 5), labels = seq(from=0, to=40, by=5))
 #axis.text.x = element_text(angle = 90, hjust = 1)
@@ -86,8 +89,12 @@ dnaconc
 
 
 
-
-#ggsave(filename = "DNAConcentrationNormalized.png", plot = dnaconc, width = 22, height = 14, dpi = 300, units = "cm")
+#mapping = aes(color=Treatment, shape = Treatment)
+ #scale_color_manual(values = c("lightskyblue2", "plum3"))
+#map_signif_level=TRUE)
+#geom_signif(comparisons = list(c("Town Pond", "Duxbury Bay")), map_signif_level=TRUE, y_position = 15000)+
+#geom_signif(comparisons = list(c("Saltbox", "Town Pond")), map_signif_level=TRUE, y_position = 12000)+ 
+ggsave(filename = "DNAConcentrationNormalizedBonf.png", plot = dnaconc, width = 25, height = 16, dpi = 300, units = "cm")
 ```
 
 #### plot data - merging all oyster and bare sediment data - normalized
@@ -101,7 +108,7 @@ compare_means( Normalized.Values ~ Treatment, data = sediment_data_new, method =
 dnaOB <- ggplot(data = sediment_data_new, mapping = aes(x = Treatment, y = Normalized.Values)) +
   geom_point(mapping = aes(color=Treatment, shape = Treatment), position = position_jitterdodge()) +
   scale_color_manual(values = c("darkseagreen3", "lightsalmon")) + 
-  stat_compare_means(method = "t.test", label.y = 20000) + 
+  stat_compare_means(method = "t.test", label.y = 25000) + 
   geom_signif(comparisons = list(c("Oyster", "Bare")), map_signif_level=TRUE) +
   geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), outlier.shape = NA) + 
   labs(
@@ -130,22 +137,22 @@ compare_means(Normalized.Values ~ Treatment, data = sediment_data_new_noTP, meth
 
 
 dnaOB_no_TP <- ggplot(data =  sediment_data_new_noTP, mapping = aes(x = Treatment, y = Normalized.Values)) +
-  geom_point(mapping = aes(color=Treatment, shape = Treatment), position = position_jitterdodge()) +
+  geom_point(mapping = aes(color=Treatment, shape = Treatment), size=4, position = position_jitterdodge()) +
   scale_color_manual(values = c("darkseagreen3", "lightsalmon")) + 
-  stat_compare_means(method = "wilcox.test", paired = TRUE, label.y = 9000) + 
-  geom_signif(comparisons = list(c("Oyster", "Bare")), map_signif_level=TRUE) +
-  geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), outlier.shape = NA) + 
+  stat_compare_means(method = "wilcox.test", paired = TRUE, label.y = 15000) + 
+  geom_signif(comparisons = list(c("Oyster", "Bare")), map_signif_level=TRUE, y_position = 12000) +
+  geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), size = 1, outlier.shape = NA) + 
   labs(
   x = "Sediment Type",
   y = "DNA Concentration (ng DNA / g sediment)",
   title = "DNA Concentration Comparison Between Bare and Oyster Sediments",
   color = "Treatment"
 ) +
-  theme(plot.title=element_text(hjust=0.5), panel.background = element_rect(fill = "ivory2"), text = element_text(family = "Times New Roman", size=12)) 
+  theme(plot.title=element_text(hjust=0.5), panel.background = element_rect(fill = "ivory2"), text = element_text(family = "Times New Roman", size=16)) 
 
 dnaOB_no_TP
 
-#ggsave(filename = "DNAConcOB.Normalized_no_TP.png", plot = dnaOB_no_TP, width = 20, height = 15, dpi = 300, units = "cm")
+#ggsave(filename = "DNAConcOB.Normalized_no_TP_Bonf.png", plot = dnaOB_no_TP, width = 25, height = 16, dpi = 300, units = "cm")
 ```
 
 
@@ -184,25 +191,32 @@ sediment_data_new_noTP <-
   sediment_data_new %>%
   dplyr::filter(Location != "Town Pond")
 
-compare_means(Normalized.Values ~ Location , data = sediment_data_new_noTP, method = "wilcox.test")
+#compare_means(Normalized.Values ~ Location , data = sediment_data_new_noTP, method = "wilcox.test")
+
+#pairwise.wilcox.test(sediment_data_new_noTP$Normalized.Values, sediment_data_new_noTP$Location, p.adjust.method = "bonf")
 
 
-nsd_no_tp <-  ggplot(data = sediment_data_new_noTP, mapping = aes(x = Location, y = Normalized.Values)) + geom_point(mapping = aes(color=Treatment, shape = Treatment), position = position_jitterdodge()) +
-  scale_color_manual(values = c("lightskyblue2", "plum3"))+
-  geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), outlier.shape = NA) + 
-  stat_compare_means(method = "wilcox.test", paired = TRUE, label.y = 8000) +
-  geom_signif(comparisons = list(c("Oyster", "Bare")))+ 
+#pwwilcox <- pairwise.wilcox.test(sediment_data_new_noTP$Normalized.Values, sediment_data_new_noTP$Location, p.adjust.method = "bonferroni")
+#pwwilcox
+
+#stat_compare_means(method = "wilcox.test", p.adjust.methods = "bonferroni" , label.y = 18000)
+
+gnsd_no_tp <-  ggplot(data = sediment_data_new_noTP, mapping = aes(x = Location, y = Normalized.Values)) + 
+  geom_point(mapping = aes(color=Treatment, shape = Treatment), size=3 , position = position_jitterdodge()) +
+  scale_color_manual(values = c("lightskyblue2", "plum3"))+ 
+  geom_boxplot(alpha = 0.3, mapping = aes(color=Treatment), outlier.shape = NA) +
+  stat_compare_means(method = "wilcox.test", pairwise.wilcox.test(sediment_data_new_noTP$Normalized.Values, sediment_data_new_noTP$Location, p.adjust.method = "bonferroni"), label.y = 18000) +
   labs(
-  x = "Location",
-  y = "DNA Concentration (ng DNA / g sediment)",
-  title = "DNA Concentration in Oyster and Bare Sediment Samples Across Locations (no TP)",
-  color = "Treatment"
-) + 
-  theme(plot.title=element_text(hjust=0.5), panel.background = element_rect(fill = "ivory2"), 
-        text = element_text(family = "Times New Roman", size=12))
-nsd_no_tp
-#ggsave(filename = "DNAConcNoTPNorm.png", plot = nsd_no_tp, width = 22, height = 14, dpi = 300, units = "cm")
+    x = "Location",
+    y = "DNA Concentration (ng DNA / g sediment)",
+    title = "DNA Concentration in Oyster and Bare Sediment Samples Across Locations (no TP)",
+    color = "Treatment"
+) + theme(plot.title=element_text(hjust=0.5), panel.background = element_rect(fill = "ivory2"), text = element_text(family = "Times New Roman", size=16))
+
+gnsd_no_tp
+#ggsave(filename = "DNAConcNoTPNormBonf.png", plot = nsd_no_tp, width = 22, height = 14, dpi = 300, units = "cm")
 #biomass
+# geom_signif(comparisons = list(c("Oyster", "Bare")), map_signif_level  =  TRUE) - significance stars
 ```
 
 ###wilcoxon test for final plot - no TP
@@ -227,42 +241,4 @@ wilcox_testNP <- wilcox.test(Location = "Ninigret Pond" ~ Normalized.Values, dat
 #compare_means(Normalized.Data)
 ```
 
-
-
-
-### mann-whitney U test for final plot
-```{r}
-library("gmodels")
-library("car")
-library("DescTools")
-library("ggplot2")
-library("qqplotr")
-library("dplyr")
-
-
-mann_whit_Utest <- subset(sediment_data_new, select = c(Location, Normalized.Values))
-#mann_whit_Utest$Collection.Date <- as.logical(mann_whit_Utest$Collection.Date)
-#mann_whit_Utest$Net.Incubation.Date <- as.logical(mann_whit_Utest$Net.Incubation.Date)
-#mann_whit_Utest$Isotope.Incubation.Date <- as.logical(mann_whit_Utest$Isotope.Incubation.Date)
-str(mann_whit_Utest)
-
-
-mann_whit_Utest$Normalized.Values<- as.factor(mann_whit_Utest$Normalized.Values)
-
-mann_whit_Utest %>% dplyr::filter(mann_whit_Utest, Location != "Town Pond") %>% group_by(Location) %>% 
-  summarise(n=n(),
-            mean = mean(Normalized.Values, na.rm = TRUE), 
-            sd = sd(Normalized.Values, na.rm = TRUE),
-            stderr = sd/sqrt(n),
-            LCL = mean - qt(1 - (0.05 / 2), n - 1) * stderr,
-            UCL = mean + qt(1 - (0.05 / 2), n - 1) * stderr,
-            median = median(Normalized.Values, na.rm = TRUE),
-            min = min(Normalized.Values, na.rm = TRUE), 
-            max = max(Normalized.Values, na.rm = TRUE),
-            IQR = IQR(Normalized.Values, na.rm = TRUE),
-            LCLmed = MedianCI(Normalized.Values, na.rm=TRUE)[2],
-            UCLmed = MedianCI(Normalized.Values, na.rm=TRUE)[3])
-
-#code comes from https://stat-methods.com/home/mann-whitney-u-r/
-```
 
